# nexu-challenge

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  mypy.ini  pyproject.toml
deployment/: Dockerfile
src/: main.py
src/api/: __init__.py  health.py
src/api/v1/: __init__.py  brands.py  models.py
src/core/: config.py  constants.py  database.py  lifespan.py
src/crud/: brand.py  model.py
src/models/: brand.py  mixins.py  model.py
src/schemas/: brand.py  model.py
src/services/: brand_service.py  model_service.py
src/shared/: dates.py
src/test/: conftest.py  test_model_service.py
